--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.show-sql=true
 
 server.port=8085
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/sbarlowc_Moviegram
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/sbarlowc_Moviegram_QA
 spring.datasource.username=${DB_USERNAME:yourusername}
 spring.datasource.password=${DB_PASSWORD:yourpassword}
 spring.config.use-legacy-processing=true
