Updated CORS policy for prod

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/sbarlowc
 spring.datasource.username=${DB_USERNAME:yourusername}
 spring.datasource.password=${DB_PASSWORD:yourpassword}
 spring.config.use-legacy-processing=true
+# Set SameSite=None for cookies
+server.servlet.session.cookie.same-site=None
+# Enable secure cookies
+server.servlet.session.cookie.secure=true
