--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.5.5</version> <!-- Use the latest version available -->
+    <relativePath/> <!-- lookup parent from repository -->
+</parent>
 	<groupId>com.revature</groupId>
 	<artifactId>Project2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
