Updated CORS policy for prod

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.username=${DB_USERNAME:yourusername}
 spring.datasource.password=${DB_PASSWORD:yourpassword}
 spring.config.use-legacy-processing=true
 # Set SameSite=None for cookies
-server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.same-site=NONE
 # Enable secure cookies
 server.servlet.session.cookie.secure=true
